--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/goodcoolories?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=
+# Username: Jz5I0JYXQA
+# Database name: Jz5I0JYXQA
+# Password: tIcNH7FHQA
+# Server: remotemysql.com
+# Port: 3306
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/Jz5I0JYXQA?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=Jz5I0JYXQA
+spring.datasource.password=tIcNH7FHQA
+#spring.datasource.url=jdbc:mysql://localhost:3306/goodcoolories?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
 spring.jpa.properties.hibernate.connection.CharSet=utf-8
 spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.hibernate.ddl-auto=update
-
-#l: goodcoolories@gmail.com
-#h: goodcoolories.123
+#l: dietetyk@goodcoolories.hub.pl
+#h: goodcoolories123
+spring.mail.host=goodcoolories.hub.pl
+spring.mail.default-encoding=utf-8
+spring.mail.port=587
+spring.mail.username=dietetyk@goodcoolories.hub.pl
+spring.mail.password=goodcoolories123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
